# llm-cost-auditor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sample-data/: example-generic.csv  example-logs.json  example-openai.csv  example-report.md
scripts/: generate_sample_data.py
src/: main.py
src/agents/: analysis.py  base.py  ingestion.py  optimization.py  quality_eval.py  report.py  routing_sim.py
src/models/: agent_result.py  analysis.py  features.py  log_entry.py  quality.py  recommendation.py  report.py
src/parsers/: generic.py  langfuse.py  openai_csv.py
src/report/: markdown.py
src/tools/: __init__.py  analysis_tools.py  optimization_tools.py  registry.py  report_tools.py
src/utils/: config.py  dataset_summary.py  json_extract.py  langfuse_setup.py  llm_client.py  model_utils.py  retry.py
tests/: test_agent_loop.py  test_analysis.py  test_models.py  test_parsers.py  test_quality_eval.py  test_tools.py
